Reetan.Nayak Dev 25/force-app/main/default/objects/Course__c/fields/Course_Duration__c.field-meta.xml
<CustomField>
    <fullName>Course_Duration__c</fullName>
    <label>Course Duration in hr</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>