Reetan.Nayak Dev 25/force-app/main/default/objects/Course__c/fields/Course_Fees__c.field-meta.xml
<CustomField>
    <fullName>Course_Fees__c</fullName>
    <label>Course Fees</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>