Reetan.Nayak Dev 25/force-app/main/default/objects/Course__c/fields/ProgramId__c.field-meta.xml
<CustomField>
    <fullName>ProgramId__c</fullName>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Courses</relationshipLabel>
    <relationshipName>Courses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>