Reetan.Nayak Dev 25/force-app/main/default/objects/Course__c/fields/Programs__c.field-meta.xml
<CustomField>
    <fullName>Programs__c</fullName>
    <label>Programs</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Core Java</fullName>
            </value>
            <value>
                <fullName>JSP</fullName>
            </value>
            <value>
                <fullName>Servlets</fullName>
            </value>
            <value>
                <fullName>SOQL</fullName>
            </value>
            <value>
                <fullName>Struts</fullName>
            </value>
            <value>
                <fullName>VisualForce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>